hard-gists/5173293/run.log
=== Docker Run Log for 5173293 ===
Started at: Mi 29. Okt 15:25:01 CET 2025

[2025-10-29 15:25:01] START: Running container for 5173293
[2025-10-29 15:25:02] SUCCESS: Container 316206d3ae63e7481d2d743b2d0a5a98b6f3b62bd6bddb9af7b7cacaa13416e2 started for 5173293
=== Container logs for 5173293 ===
  File "/snippet.py", line 106
    print 'forks: ', forks
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5173293 ===
[2025-10-29 15:25:04] INFO: Container 316206d3ae63e7481d2d743b2d0a5a98b6f3b62bd6bddb9af7b7cacaa13416e2 has stopped
